# agent-cli

./: README.md  pyproject.toml  test_streaming_demo.py  test_streaming_unit.py
agent_cli/agents/: chat.py
agent_cli/services/: _wyoming_utils.py  tts.py
tests/: test_wyoming_utils.py
tests/agents/: test_interactive_extra.py
